@@ -642,141 +642,6 @@ fail:
         return r;
 }
 
-int bus_kernel_take_fd(sd_bus *b) {
-        struct kdbus_cmd_hello *hello;
-        struct kdbus_item *item;
-        _cleanup_free_ char *g = NULL;
-        const char *name;
-        size_t l = 0, m = 0, sz;
-        int r;
-
-        assert(b);
-
-        if (b->is_server)
-                return -EINVAL;
-
-        b->use_memfd = 1;
-
-        if (b->connection_name) {
-                g = bus_label_escape(b->connection_name);
-                if (!g)
-                        return -ENOMEM;
-
-                name = g;
-        } else {
-                char pr[17] = {};
-
-                /* If no name is explicitly set, we'll include a hint
-                 * indicating the library implementation, a hint which
-                 * kind of bus this is and the thread name */
-
-                assert_se(prctl(PR_GET_NAME, (unsigned long) pr) >= 0);
-
-                if (isempty(pr)) {
-                        name = b->is_system ? "sd-system" :
-                                b->is_user ? "sd-user" : "sd";
-                } else {
-                        _cleanup_free_ char *e = NULL;
-
-                        e = bus_label_escape(pr);
-                        if (!e)
-                                return -ENOMEM;
-
-                        g = strappend(b->is_system ? "sd-system-" :
-                                      b->is_user ? "sd-user-" : "sd-",
-                                      e);
-                        if (!g)
-                                return -ENOMEM;
-
-                        name = g;
-                }
-
-                b->connection_name = bus_label_unescape(name);
-                if (!b->connection_name)
-                        return -ENOMEM;
-        }
-
-        m = strlen(name);
-
-        sz = ALIGN8(offsetof(struct kdbus_cmd_hello, items)) +
-                ALIGN8(offsetof(struct kdbus_item, str) + m + 1);
-
-        if (b->fake_creds_valid)
-                sz += ALIGN8(offsetof(struct kdbus_item, creds) + sizeof(struct kdbus_creds));
-
-        if (b->fake_label) {
-                l = strlen(b->fake_label);
-                sz += ALIGN8(offsetof(struct kdbus_item, str) + l + 1);
-        }
-
-        hello = alloca0(sz);
-        hello->size = sz;
-        hello->conn_flags = b->hello_flags;
-        hello->attach_flags = b->attach_flags;
-        hello->pool_size = KDBUS_POOL_SIZE;
-
-        item = hello->items;
-
-        item->size = offsetof(struct kdbus_item, str) + m + 1;
-        item->type = KDBUS_ITEM_CONN_NAME;
-        memcpy(item->str, name, m + 1);
-        item = KDBUS_ITEM_NEXT(item);
-
-        if (b->fake_creds_valid) {
-                item->size = offsetof(struct kdbus_item, creds) + sizeof(struct kdbus_creds);
-                item->type = KDBUS_ITEM_CREDS;
-                item->creds = b->fake_creds;
-
-                item = KDBUS_ITEM_NEXT(item);
-        }
-
-        if (b->fake_label) {
-                item->size = offsetof(struct kdbus_item, str) + l + 1;
-                item->type = KDBUS_ITEM_SECLABEL;
-                memcpy(item->str, b->fake_label, l+1);
-        }
-
-        r = ioctl(b->input_fd, KDBUS_CMD_HELLO, hello);
-        if (r < 0)
-                return -errno;
-
-        if (!b->kdbus_buffer) {
-                b->kdbus_buffer = mmap(NULL, KDBUS_POOL_SIZE, PROT_READ, MAP_SHARED, b->input_fd, 0);
-                if (b->kdbus_buffer == MAP_FAILED) {
-                        b->kdbus_buffer = NULL;
-                        return -errno;
-                }
-        }
-
-        /* The higher 32bit of both flags fields are considered
-         * 'incompatible flags'. Refuse them all for now. */
-        if (hello->bus_flags > 0xFFFFFFFFULL ||
-            hello->conn_flags > 0xFFFFFFFFULL)
-                return -ENOTSUP;
-
-        if (!bloom_validate_parameters((size_t) hello->bloom.size, (unsigned) hello->bloom.n_hash))
-                return -ENOTSUP;
-
-        b->bloom_size = (size_t) hello->bloom.size;
-        b->bloom_n_hash = (unsigned) hello->bloom.n_hash;
-
-        if (asprintf(&b->unique_name, ":1.%llu", (unsigned long long) hello->id) < 0)
-                return -ENOMEM;
-
-        b->unique_id = hello->id;
-
-        b->is_kernel = true;
-        b->bus_client = true;
-        b->can_fds = !!(hello->conn_flags & KDBUS_HELLO_ACCEPT_FD);
-        b->message_version = 2;
-        b->message_endian = BUS_NATIVE_ENDIAN;
-
-        /* the kernel told us the UUID of the underlying bus */
-        memcpy(b->server_id.bytes, hello->id128, sizeof(b->server_id.bytes));
-
-        return bus_start_running(b);
-}
-
 static void close_kdbus_msg(sd_bus *bus, struct kdbus_msg *k) {
         uint64_t off;
         struct kdbus_item *d;
