@@ -14,6 +14,7 @@ systemd System and Service Manager
  	- allow naming event sources;
  	- use event source name rather than address in debug messages;
  	- name event sources used in libraries;
+ 	- remove “bus_kernel_take_fd” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
